--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,18 @@
-<p>Alors comme ça on essaye de tricher !</p>
+<div class="row justify-content-center">
+    <div class="col-md-12 col-sm-12">
+        <div class="card shadow-lg border-0 rounded-lg mt-5 mx-auto" style="width: 30rem;">
+            <h3 class="display-1 text-muted text-center">
+                404
+            </h3>
+
+            <span class="mb-2 text-muted text-center">
+                You filthy cheater, How dare you !
+            </span>
+
+            <div class="card-body mx-auto">
+                <a type="button" href="#"
+                class="btn btn-sm btn-info text-white"> Back To Home </a>
+            </div>
+        </div>
+    </div>
+</div>
